# CA-standalone

./: .gitignore  CACell.h  CMakeLists.txt  CellularAutomaton.cc  CellularAutomaton.h  FKDPoint.h  KDDoublets.h  Makefile  MyHits.h  fcc-hits.cpp  main  main.cpp
